created responsive mobile nav bar that toggles hamburger menu

--- a/index.html
+++ b/index.html
@@ -17,17 +17,14 @@
 
 <body>
     <aside>
-        <div class="logoImg">
-            <img src="" alt="Joshua Duke Logo">
-        </div>
-
         <nav>
+            <img class="logo" src="" alt="Joshua Duke Logo">
             <ul>
                 <li>
                     <a href="">Home</a>
                 </li>
                 <li>
-                    <a href="">Projects</a>
+                    <a href="html/projects.html">Projects</a>
                 </li>
                 <li>
                     <a href="">Resume</a>
@@ -39,10 +36,12 @@
                     <a href="">Timeline</a>
                 </li>
                 <li>
-                    <a href="">Contact</a>
+                    <a href="html/contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
+
+
         <footer>
             <div class="socials">
                 <a href=""><i class="fab fa-github fa-lg"></i></a>
@@ -53,12 +52,52 @@
             <p>Joshua Duke 2021</p>
         </footer>
     </aside>
+
     <main>
         <div class="aboutMe">
             <p>Joshua Duke</p>
             <h1> Front-End Developer</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor assumenda accusantium rem eos doloremque ratione qui cum sint incidunt. Id optio, enim modi natus assumenda dolores. Amet itaque natus distinctio illo. Quas, nobis aliquam? Aspernatur similique a harum culpa! Voluptate perferendis earum ullam vel vero minima perspiciatis ex obcaecati assumenda.</p>
+            <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor assumenda accusantium rem eos doloremque ratione qui cum sint incidunt. Id optio, enim modi natus assumenda dolores. Amet itaque natus distinctio illo. Quas, nobis aliquam? Aspernatur similique a harum culpa! Voluptate perferendis earum ullam vel vero minima perspiciatis ex obcaecati assumenda.</p>
+
+            <div class="goToProjects">
+                <p>Check out my projects</p>
+                <a href="html/projects.html">
+                    <button>Projects</button>
+                </a> 
+            </div>       
         </div>
+
+        <div class="hamburger">
+
+            <div class="mobileNav">
+                <ul>
+                    <li>
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="html/projects.html">Projects</a>
+                    </li>
+                    <li>
+                        <a href="">Resume</a>
+                    </li>
+                    <li>
+                        <a href="">Blog</a>
+                    </li>
+                    <li>
+                        <a href="">Timeline</a>
+                    </li>
+                    <li>
+                        <a href="html/contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+
+            <button id="hamburgerMenu">
+                <i class="fas fa-bars"></i>
+                <i class="fas fa-times"></i>
+            </button>
+        </div>     
+
 
         <section class="techStack">
             <div>
