completed hamburger menu

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
+    <img class="logo" src="" alt="Joshua Duke Logo">
     <aside>
         <nav>
-            <img class="logo" src="" alt="Joshua Duke Logo">
             <ul>
                 <li>
                     <a href="">Home</a>
@@ -44,9 +44,15 @@
 
         <footer>
             <div class="socials">
-                <a href=""><i class="fab fa-github fa-lg"></i></a>
-                <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
-                <a href=""><i class="fab fa-instagram fa-lg"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/joshua-duke/">
+                    <i class="fab fa-linkedin fa-lg"></i>
+                </a>
+                <a target="_blank" href="https://github.com/joshuaduke">
+                    <i class="fab fa-github fa-lg"></i>
+                </a>
+                <a target="_blank" href="https://www.instagram.com/joshuaduke97/">
+                    <i class="fab fa-instagram fa-lg"></i>
+                </a>
             </div>
 
             <p>Joshua Duke 2021</p>
