Added layout for project cards

--- a/html/contact.html
+++ b/html/contact.html
@@ -4,9 +4,87 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact me</title>
+            <!-- Icons -->
+            <script src="https://kit.fontawesome.com/5438fccc05.js" crossorigin="anonymous"></script>
+            <!-- Google Fonts -->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;700&family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="/styles/index.css">
 </head>
 <body>
-    
+    <aside>
+        <div class="logoImg">
+            <img src="" alt="Joshua Duke Logo">
+        </div>
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="projects.html">Projects</a>
+                </li>
+                <li>
+                    <a href="">Resume</a>
+                </li>
+                <li>
+                    <a href="">Blog</a>
+                </li>
+                <li>
+                    <a href="">Timeline</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <footer>
+            <div class="socials">
+                <a href=""><i class="fab fa-github fa-lg"></i></a>
+                <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
+                <a href=""><i class="fab fa-instagram fa-lg"></i></a>
+            </div>
+
+            <p>Joshua Duke 2021</p>
+        </footer>
+    </aside>
+    <h1>Contact page</h1>
+
+    <div class="hamburger">
+
+        <div class="mobileNav">
+            <ul>
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="projects.html">Projects</a>
+                </li>
+                <li>
+                    <a href="">Resume</a>
+                </li>
+                <li>
+                    <a href="">Blog</a>
+                </li>
+                <li>
+                    <a href="">Timeline</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+
+        <button id="hamburgerMenu">
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-times"></i>
+        </button>
+    </div>     
+
+
+    <script src="/script/index.js"></script>
 </body>
 </html>
