--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor assumenda accusantium rem eos doloremque ratione qui cum sint incidunt. Id optio, enim modi natus assumenda dolores. Amet itaque natus distinctio illo. Quas, nobis aliquam? Aspernatur similique a harum culpa! Voluptate perferendis earum ullam vel vero minima perspiciatis ex obcaecati assumenda.</p>
 
             <div class="goToProjects">
-                <p>Check out my projects</p>
+                <h3>Check out my projects</h3>
                 <a href="html/projects.html">
                     <button>Projects</button>
                 </a> 
@@ -78,7 +78,7 @@
             <div class="mobileNav">
                 <ul>
                     <li>
-                        <a href="">Home</a>
+                        <a href="/">Home</a>
                     </li>
                     <li>
                         <a href="html/projects.html">Projects</a>
