fix routing issues on project page

--- a/html/projects.html
+++ b/html/projects.html
@@ -12,8 +12,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;700&family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
         <!-- My stylesheets -->
-        <link rel="stylesheet" href="/styles/index.css">
-        <link rel="stylesheet" href="/styles/projects.css">
+        <link rel="stylesheet" href="styles/index.css">
+        <link rel="stylesheet" href="styles/projects.css">
 </head>
 <body>
     <aside>
@@ -24,7 +24,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/">Home</a>
+                    <a href="/index.html">Home</a>
                 </li>
                 <li>
                     <a href="#">Projects</a>
