fixed routing issues

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="">Home</a>
                 </li>
                 <li>
-                    <a href="html/projects.html">Projects</a>
+                    <a href="projects.html">Projects</a>
                 </li>
                 <li>
                     <a href="">Resume</a>
@@ -36,7 +36,7 @@
                     <a href="">Timeline</a>
                 </li>
                 <li>
-                    <a href="html/contact.html">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -67,7 +67,7 @@
 
             <div class="goToProjects">
                 <h3>Check out my projects</h3>
-                <a href="html/projects.html">
+                <a href="projects.html">
                     <button>Projects</button>
                 </a> 
             </div>       
@@ -81,7 +81,7 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="html/projects.html">Projects</a>
+                        <a href="projects.html">Projects</a>
                     </li>
                     <li>
                         <a href="">Resume</a>
@@ -93,7 +93,7 @@
                         <a href="">Timeline</a>
                     </li>
                     <li>
-                        <a href="html/contact.html">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
