--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;700&family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="/styles/index.css">
+            <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <aside>
@@ -22,7 +22,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="projects.html">Projects</a>
