Improved styles on home page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <body>
     <div class="logoImg">
-        <img src="" alt="Joshua Duke Logo">
+        <!-- <img src="" alt="Joshua Duke Logo"> -->
+        <h2>Joshua Duke</h2>
     </div>
     <aside>
         <nav>
@@ -63,8 +64,8 @@
 
     <main>
         <div class="aboutMe">
-            <p>Joshua Duke</p>
-            <h1> Front-End Developer</h1>
+            <h1>JOSHUA DUKE</h1>
+            <p><strong>Front-End Developer</strong> </p>
             <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor assumenda accusantium rem eos doloremque ratione qui cum sint incidunt. Id optio, enim modi natus assumenda dolores. Amet itaque natus distinctio illo. Quas, nobis aliquam? Aspernatur similique a harum culpa! Voluptate perferendis earum ullam vel vero minima perspiciatis ex obcaecati assumenda.</p>
 
             <div class="goToProjects">
@@ -76,7 +77,6 @@
         </div>
 
         <div class="hamburger">
-
             <div class="mobileNav">
                 <ul>
                     <li>
@@ -121,29 +121,34 @@
             </button>
         </div>     
 
-        <section>
-            <h2>Techonologies I enjoy using</h2>
+        <section class="techSkills">
+            <h2>Skills</h2>
             <div class="techStack">
-                <div>
+                <div class="skillContainer">
                     <i class="fab fa-js fa-5x"></i>
                     <p>JavaScript</p>
                 </div>
-                <div>
+                <div class="skillContainer">
                     <i class="fab fa-sass fa-5x"></i>
                     <p>Sass</p>
                 </div>
-                <div>
+                <div class="skillContainer">
                     <i class="fab fa-react fa-5x"></i>
                     <p>React Js</p>
                 </div>
-                <div>
+                <div class="skillContainer">
                     <i class="fab fa-node fa-5x"></i>
                     <p>Node Js</p>
                 </div>
+                <div class="skillContainer">
+                    <i class="fab fa-git-alt fa-5x"></i>
+                    <p>Git</p>
+                </div>
+                <div class="skillContainer">
+                    <i class="fab fa-git-alt fa-5x"></i>
+                    <p>Git</p>
+                </div>
             </div>   
-            
-            
-
         </section>
     </main>
 
