Improvements on website being mobile responsive

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     <main>
         <div class="aboutMe">
             <h1>JOSHUA DUKE</h1>
-            <p><strong>Front-End Developer</strong> </p>
+            <h3><strong>Front-End Developer</strong> </h3>
             <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor assumenda accusantium rem eos doloremque ratione qui cum sint incidunt. Id optio, enim modi natus assumenda dolores. Amet itaque natus distinctio illo. Quas, nobis aliquam? Aspernatur similique a harum culpa! Voluptate perferendis earum ullam vel vero minima perspiciatis ex obcaecati assumenda.</p>
-
+            <br>
+            <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor assumenda accusantium rem eos doloremque ratione qui cum sint incidunt. Id optio, enim modi natus assumenda dolores. Amet itaque natus distinctio illo. Quas, nobis aliquam? Aspernatur similique a harum culpa! Voluptate perferendis earum ullam vel vero minima perspiciatis ex obcaecati assumenda.</p>
             <div class="goToProjects">
-                <h2>Check out my projects</h2>
                 <a href="projects.html">
                     <button>Projects</button>
                 </a> 
