--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
         <h1>Projects page</h1>
         <section class="projectsContainer">
             <div class="prjCard">
-                <img src="/images/test.png" alt="" class="prjImg">
+                <img src="images/test.png" alt="" class="prjImg">
                 <h3 class="prjTitle">Lorem, ipsum dolor.</h3>
                 
                 <ul class="prjLinks">
@@ -81,7 +81,7 @@
                 
             </div>
             <div class="prjCard">
-                <img src="/images/MathGame.png" alt="" class="prjImg">
+                <img src="images/MathGame.png" alt="" class="prjImg">
                 <h3 class="prjTitle">SuperHero Math Game</h3>
                 <ul class="prjLinks" >
                     <li>
@@ -139,7 +139,7 @@
         <div class="mobileNav">
             <ul>
                 <li>
-                    <a href="/">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="#">Projects</a>
